syntax = "proto3";

option java_package = "com.mss.thebigcalendar.data.model.proto";
option java_multiple_files = true;

message ActivityProto {
  string id = 1;
  string title = 2;
  string description = 3;
  string date = 4; // "yyyy-MM-dd"
  string start_time = 5; // "HH:mm"
  string end_time = 6; // "HH:mm"
  bool is_all_day = 7;
  string location = 8;
  string category_color = 9;
  ActivityTypeProto activity_type = 10;
  string recurrence_rule = 11;
  bool is_completed = 12;
  bool is_from_google = 13;
  string visibility = 14; // LOW, MEDIUM, HIGH
  bool show_in_calendar = 15; // Novo campo para controlar se a atividade aparece no calend√°rio
  NotificationSettingsProto notification_settings = 16;
}

message NotificationSettingsProto {
  bool is_enabled = 1;
  string notification_time = 2; // "HH:mm"
  string notification_type = 3; // NONE, BEFORE_ACTIVITY, etc.
  int32 custom_minutes_before = 4;
}

enum ActivityTypeProto {
  EVENT = 0;
  TASK = 1;
  BIRTHDAY = 2;
  NOTE = 3;
}

message Activities {
  repeated ActivityProto activities = 1;
}
